[BUGFIX] Available with of halign object is wrong
* Vertical scrollbar has to be included in calculating the width within the element queries and rwd objects
* The overflow: hidden of the html tag prevented this and caused the wrong calculation

--- a/styles/components/_base.scss
+++ b/styles/components/_base.scss
@@ -3,7 +3,6 @@ html {
 	-webkit-text-size-adjust: 100%; /* Prevents iOS text size adjust after orientation change */
 	-ms-text-size-adjust: 100%; /* www.456bereastreet.com/archive/201012/controlling_text_size_in_safari_for_ios_without_disabling_user_zoom */
 	&.frontendx-loading.javascript-is-enabled {
-		overflow: hidden;
 		.frontendx-loading {
 			width: 100%;
 			height: 100%;
