--- a/styles/frontendx.css
+++ b/styles/frontendx.css
@@ -71,36 +71,34 @@ html {
   /* Prevents iOS text size adjust after orientation change */
   -ms-text-size-adjust: 100%;
   /* www.456bereastreet.com/archive/201012/controlling_text_size_in_safari_for_ios_without_disabling_user_zoom */ }
-  html.frontendx-loading.javascript-is-enabled {
-    overflow: hidden; }
-    html.frontendx-loading.javascript-is-enabled .frontendx-loading {
-      width: 100%;
-      height: 100%;
-      position: fixed;
-      left: 0;
-      top: 0;
-      background-color: white;
-      z-index: 9999; }
-      html.frontendx-loading.javascript-is-enabled .frontendx-loading .spinner {
-        height: 40px;
-        width: 40px;
-        margin-left: -40px;
-        margin-top: -40px;
-        position: absolute;
-        left: 50%;
-        top: 50%;
-        -webkit-animation: rotation 0.6s infinite linear;
-        -moz-animation: rotation 0.6s infinite linear;
-        -o-animation: rotation 0.6s infinite linear;
-        animation: rotation 0.6s infinite linear;
-        -moz-border-radius: 100%;
-        -webkit-border-radius: 100%;
-        -o-border-radius: 100%;
-        border-radius: 100%;
-        border-left: 6px solid rgba(0, 0, 0, 0.15);
-        border-right: 6px solid rgba(0, 0, 0, 0.15);
-        border-bottom: 6px solid rgba(0, 0, 0, 0.15);
-        border-top: 6px solid rgba(0, 0, 0, 0.8); }
+  html.frontendx-loading.javascript-is-enabled .frontendx-loading {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    left: 0;
+    top: 0;
+    background-color: white;
+    z-index: 9999; }
+    html.frontendx-loading.javascript-is-enabled .frontendx-loading .spinner {
+      height: 40px;
+      width: 40px;
+      margin-left: -40px;
+      margin-top: -40px;
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      -webkit-animation: rotation 0.6s infinite linear;
+      -moz-animation: rotation 0.6s infinite linear;
+      -o-animation: rotation 0.6s infinite linear;
+      animation: rotation 0.6s infinite linear;
+      -moz-border-radius: 100%;
+      -webkit-border-radius: 100%;
+      -o-border-radius: 100%;
+      border-radius: 100%;
+      border-left: 6px solid rgba(0, 0, 0, 0.15);
+      border-right: 6px solid rgba(0, 0, 0, 0.15);
+      border-bottom: 6px solid rgba(0, 0, 0, 0.15);
+      border-top: 6px solid rgba(0, 0, 0, 0.8); }
 
 body {
   font-size: 16px;
